--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<iframe width="560" height="315" src="https://www.youtube.com/embed/sSVnIA0BiS4" frameborder="0" allowfullscreen></iframe>
+
+<html>
+    <head>
+        <title>Background Image Goes Wrong</title>
+        <style type="text/css">
+            #main {
+                background-image: url('twitter-logo.png');
+                height: 600px;
+                width: 800px;
+            }
+        </style>
+    </head>
+
+    <body>
+        <div id="main">
+        </div>
+    </body>
+</html>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/sSVnIA0BiS4" frameborder="0" allowfullscreen></iframe><!DOCTYPE html>
