--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Background Image Goes Wrong</title>
         <style type="text/css">
             #main {
-                background-image: url('twitter-logo.png');
+                background-image: url('https://www.google.co.id/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwij3prumN_TAhWJr48KHfNIBS8QjRwIBw&url=https%3A%2F%2Fwww.pinterest.com%2F0chan%2Ftokyo-ghoul%2F&psig=AFQjCNFjn-SzE_ZIkKB0zNRuHe8CFQW9iw&ust=1494294835634073');
                 height: 600px;
                 width: 800px;
             }
